The base class is done

--- a/tour-planner/src/main/resources/application.properties
+++ b/tour-planner/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Smart Tour Planner
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/tour-planner
-spring.datasource.username=tour-user
+spring.datasource.url=jdbc:postgresql://localhost:5432/tour_planner
+spring.datasource.username=tour_user
 spring.datasource.password=tour1234
 
 spring.jpa.hibernate.ddl-auto=update
